tests/cases/should_fail/misc/malformed_access_name.stderr
error: unexpectedly encountered a `(...)`
 --> $DIR/malformed_access_name.hash:7:7
6 |   
7 |   a::b:c()
  |         ^^ here
  = help: consider adding a `;`
